Basic pdf with jspdf

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+html {
+  -webkit-print-color-adjust: exact; /* This makes sure that the PDF is rendered exactly like our layout. */
+}
+
 html,
 body {
   padding: 0;
